--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <img src="image-qr-code.png" alt="qr-code" width="325px">
     <h2>Improve your front-end<br>
     skills by building projects</h2>
-    <h3>Scan the QR code to visit Frontend <br>
-    Mentor and take your coding skills to <br>
+    <h3>Scan the QR code to visit Frontend 
+    Mentor and take your coding skills to 
     the next level</h3>
   </div>
   <body>
