--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
-    <title></title>
+    <link rel="icon" href="favicon.ico" sizes="32x32">
+    <title>Fronted mentor challenge</title>
   </head>
-  <div class="box">
-    <img src="image-qr-code.png" alt="qr-code" width="325px">
-    <h2>Improve your front-end<br>
-    skills by building projects</h2>
-    <h3>Scan the QR code to visit Frontend 
-    Mentor and take your coding skills to 
-    the next level</h3>
-  </div>
-  <body>
 
+  <body>
+    <div class="box">
+      <img src="images/image-qr-code.png" alt="qr-code" width="325px">
+      <h1>Improve your front-end
+      skills by building projects</h1>
+      <h3>Scan the QR code to visit Frontend
+      Mentor and take your coding skills to
+      the next level</h3>
+    </div>
   </body>
 </html>
