--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 
   <body>
     <div class="box">
-      <img src="images/image-qr-code.png" alt="qr-code" width="325px">
+      <img src="image-qr-code.png" alt="qr-code" width="325px">
       <h1>Improve your front-end
       skills by building projects</h1>
       <h3>Scan the QR code to visit Frontend
